--- a/DaeguAccident/DNN.ipynb
+++ b/DaeguAccident/DNN.ipynb
@@ -11,7 +11,20 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-11-18 01:42:42.030051: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F AVX512_VNNI FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-11-18 01:42:42.134526: I tensorflow/core/util/port.cc:104] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2023-11-18 01:42:42.662546: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /usr/local/onnxruntime-linux-x64-1.6.0:/opt/xilinx/xrt/lib::/home/chms/miniconda3/envs/tf/lib/\n",
+      "2023-11-18 01:42:42.662631: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /usr/local/onnxruntime-linux-x64-1.6.0:/opt/xilinx/xrt/lib::/home/chms/miniconda3/envs/tf/lib/\n",
+      "2023-11-18 01:42:42.662637: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -31,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,9 +87,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-11-18 01:42:43.672005: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F AVX512_VNNI FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-11-18 01:42:44.244117: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1613] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 537 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3060, pci bus id: 0000:af:00.0, compute capability: 8.6\n"
+     ]
+    }
+   ],
    "source": [
     "model = tf.keras.models.Sequential([\n",
     "    tf.keras.layers.Input(shape=(5)),\n",
@@ -94,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,38 +132,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/100\n",
-      "791/791 [==============================] - 10s 10ms/step - loss: 0.2312 - mae: 2.1462 - val_loss: 0.1967 - val_mae: 2.0126\n",
+      "Epoch 1/100\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-11-18 01:42:45.901037: I tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:630] TensorFloat-32 will be used for the matrix multiplication. This will only be logged once.\n",
+      "2023-11-18 01:42:45.903859: I tensorflow/compiler/xla/service/service.cc:173] XLA service 0x7f8f45949110 initialized for platform CUDA (this does not guarantee that XLA will be used). Devices:\n",
+      "2023-11-18 01:42:45.903876: I tensorflow/compiler/xla/service/service.cc:181]   StreamExecutor device (0): NVIDIA GeForce RTX 3060, Compute Capability 8.6\n",
+      "2023-11-18 01:42:45.907726: I tensorflow/compiler/mlir/tensorflow/utils/dump_mlir_util.cc:268] disabling MLIR crash reproducer, set env var `MLIR_CRASH_REPRODUCER_DIRECTORY` to enable.\n",
+      "2023-11-18 01:42:46.055506: I tensorflow/compiler/jit/xla_compilation_cache.cc:477] Compiled cluster using XLA!  This line is logged at most once for the lifetime of the process.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "791/791 [==============================] - 8s 7ms/step - loss: 0.2395 - mae: 2.1752 - val_loss: 0.2132 - val_mae: 1.9890\n",
       "Epoch 2/100\n",
-      "791/791 [==============================] - 8s 10ms/step - loss: 0.2008 - mae: 2.0500 - val_loss: 0.1966 - val_mae: 2.0322\n",
+      "791/791 [==============================] - 5s 6ms/step - loss: 0.2009 - mae: 2.0575 - val_loss: 0.2044 - val_mae: 2.0373\n",
       "Epoch 3/100\n",
-      "791/791 [==============================] - 8s 10ms/step - loss: 0.2007 - mae: 2.0509 - val_loss: 0.1985 - val_mae: 1.9977\n",
+      "791/791 [==============================] - 5s 6ms/step - loss: 0.2007 - mae: 2.0571 - val_loss: 0.2060 - val_mae: 2.0689\n",
       "Epoch 4/100\n",
-      "791/791 [==============================] - 8s 11ms/step - loss: 0.2009 - mae: 2.0516 - val_loss: 0.1965 - val_mae: 2.0209\n",
+      "791/791 [==============================] - 5s 6ms/step - loss: 0.2006 - mae: 2.0573 - val_loss: 0.2048 - val_mae: 2.0551\n",
       "Epoch 5/100\n",
-      "791/791 [==============================] - 8s 10ms/step - loss: 0.2011 - mae: 2.0517 - val_loss: 0.1965 - val_mae: 2.0237\n",
-      "Epoch 6/100\n",
-      "791/791 [==============================] - 8s 10ms/step - loss: 0.2008 - mae: 2.0505 - val_loss: 0.1968 - val_mae: 2.0354\n",
-      "Epoch 7/100\n",
-      "791/791 [==============================] - 8s 10ms/step - loss: 0.2010 - mae: 2.0502 - val_loss: 0.1970 - val_mae: 2.0402\n",
-      "Epoch 8/100\n",
-      "791/791 [==============================] - 8s 10ms/step - loss: 0.2009 - mae: 2.0525 - val_loss: 0.1993 - val_mae: 2.0617\n"
+      "791/791 [==============================] - 5s 6ms/step - loss: 0.2006 - mae: 2.0579 - val_loss: 0.2048 - val_mae: 2.0267\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7f32d34b8430>"
+       "<keras.callbacks.History at 0x7f97a20b5ca0>"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,23 +190,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "248/248 [==============================] - 1s 3ms/step\n"
+      "248/248 [==============================] - 1s 2ms/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.4513449381670079"
+       "0.44385643106571354"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,10 +224,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "343/343 [==============================] - 1s 2ms/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "ECLOs = model.predict(test_set[['요일', '기상상태', '도로형태', '노면상태', '사고유형']])\n",
+    "ans = pd.read_csv('open/sample_submission.csv')\n",
+    "ans['ECLO'] = ECLOs\n",
+    "ans.to_csv('ans_dnn.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
@@ -212,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
