--- a/DaeguAccident/DNN.ipynb
+++ b/DaeguAccident/DNN.ipynb
@@ -11,20 +11,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-11-18 01:42:42.030051: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F AVX512_VNNI FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-11-18 01:42:42.134526: I tensorflow/core/util/port.cc:104] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2023-11-18 01:42:42.662546: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /usr/local/onnxruntime-linux-x64-1.6.0:/opt/xilinx/xrt/lib::/home/chms/miniconda3/envs/tf/lib/\n",
-      "2023-11-18 01:42:42.662631: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /usr/local/onnxruntime-linux-x64-1.6.0:/opt/xilinx/xrt/lib::/home/chms/miniconda3/envs/tf/lib/\n",
-      "2023-11-18 01:42:42.662637: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -87,19 +74,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-11-18 01:42:43.672005: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F AVX512_VNNI FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-11-18 01:42:44.244117: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1613] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 537 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3060, pci bus id: 0000:af:00.0, compute capability: 8.6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = tf.keras.models.Sequential([\n",
     "    tf.keras.layers.Input(shape=(5)),\n",
@@ -117,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,55 +109,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-11-18 01:42:45.901037: I tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:630] TensorFloat-32 will be used for the matrix multiplication. This will only be logged once.\n",
-      "2023-11-18 01:42:45.903859: I tensorflow/compiler/xla/service/service.cc:173] XLA service 0x7f8f45949110 initialized for platform CUDA (this does not guarantee that XLA will be used). Devices:\n",
-      "2023-11-18 01:42:45.903876: I tensorflow/compiler/xla/service/service.cc:181]   StreamExecutor device (0): NVIDIA GeForce RTX 3060, Compute Capability 8.6\n",
-      "2023-11-18 01:42:45.907726: I tensorflow/compiler/mlir/tensorflow/utils/dump_mlir_util.cc:268] disabling MLIR crash reproducer, set env var `MLIR_CRASH_REPRODUCER_DIRECTORY` to enable.\n",
-      "2023-11-18 01:42:46.055506: I tensorflow/compiler/jit/xla_compilation_cache.cc:477] Compiled cluster using XLA!  This line is logged at most once for the lifetime of the process.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "791/791 [==============================] - 8s 7ms/step - loss: 0.2395 - mae: 2.1752 - val_loss: 0.2132 - val_mae: 1.9890\n",
+      "Epoch 1/100\n",
+      "791/791 [==============================] - 11s 11ms/step - loss: 0.3623 - mae: 2.5504 - val_loss: 0.2145 - val_mae: 2.0278\n",
       "Epoch 2/100\n",
-      "791/791 [==============================] - 5s 6ms/step - loss: 0.2009 - mae: 2.0575 - val_loss: 0.2044 - val_mae: 2.0373\n",
+      "791/791 [==============================] - 8s 10ms/step - loss: 0.2343 - mae: 2.1271 - val_loss: 0.2164 - val_mae: 2.0261\n",
       "Epoch 3/100\n",
-      "791/791 [==============================] - 5s 6ms/step - loss: 0.2007 - mae: 2.0571 - val_loss: 0.2060 - val_mae: 2.0689\n",
+      "791/791 [==============================] - 8s 11ms/step - loss: 0.2114 - mae: 2.0478 - val_loss: 0.2071 - val_mae: 2.0404\n",
       "Epoch 4/100\n",
-      "791/791 [==============================] - 5s 6ms/step - loss: 0.2006 - mae: 2.0573 - val_loss: 0.2048 - val_mae: 2.0551\n",
+      "791/791 [==============================] - 8s 11ms/step - loss: 0.2031 - mae: 2.0386 - val_loss: 0.2111 - val_mae: 2.0354\n",
       "Epoch 5/100\n",
-      "791/791 [==============================] - 5s 6ms/step - loss: 0.2006 - mae: 2.0579 - val_loss: 0.2048 - val_mae: 2.0267\n"
+      "791/791 [==============================] - 8s 11ms/step - loss: 0.2002 - mae: 2.0380 - val_loss: 0.2045 - val_mae: 2.0496\n",
+      "Epoch 6/100\n",
+      "791/791 [==============================] - 8s 10ms/step - loss: 0.1995 - mae: 2.0383 - val_loss: 0.2043 - val_mae: 2.0498\n",
+      "Epoch 7/100\n",
+      "791/791 [==============================] - 8s 11ms/step - loss: 0.1993 - mae: 2.0386 - val_loss: 0.2020 - val_mae: 2.0523\n",
+      "Epoch 8/100\n",
+      "791/791 [==============================] - 9s 11ms/step - loss: 0.1990 - mae: 2.0380 - val_loss: 0.2016 - val_mae: 2.0563\n",
+      "Epoch 9/100\n",
+      "791/791 [==============================] - 8s 11ms/step - loss: 0.1989 - mae: 2.0394 - val_loss: 0.2028 - val_mae: 2.0455\n",
+      "Epoch 10/100\n",
+      "791/791 [==============================] - 8s 11ms/step - loss: 0.1987 - mae: 2.0381 - val_loss: 0.2020 - val_mae: 2.0468\n",
+      "Epoch 11/100\n",
+      "791/791 [==============================] - 8s 11ms/step - loss: 0.1986 - mae: 2.0388 - val_loss: 0.2012 - val_mae: 2.0527\n",
+      "Epoch 12/100\n",
+      "791/791 [==============================] - 8s 11ms/step - loss: 0.1987 - mae: 2.0385 - val_loss: 0.2003 - val_mae: 2.0643\n",
+      "Epoch 13/100\n",
+      "791/791 [==============================] - 8s 11ms/step - loss: 0.1981 - mae: 2.0353 - val_loss: 0.1996 - val_mae: 2.0573\n",
+      "Epoch 14/100\n",
+      "791/791 [==============================] - 8s 11ms/step - loss: 0.1978 - mae: 2.0345 - val_loss: 0.1999 - val_mae: 2.0618\n",
+      "Epoch 15/100\n",
+      "791/791 [==============================] - 8s 10ms/step - loss: 0.1979 - mae: 2.0364 - val_loss: 0.1997 - val_mae: 2.0633\n",
+      "Epoch 16/100\n",
+      "791/791 [==============================] - 8s 10ms/step - loss: 0.1977 - mae: 2.0376 - val_loss: 0.1995 - val_mae: 2.0541\n",
+      "Epoch 17/100\n",
+      "791/791 [==============================] - 8s 10ms/step - loss: 0.1976 - mae: 2.0359 - val_loss: 0.1999 - val_mae: 2.0593\n",
+      "Epoch 18/100\n",
+      "791/791 [==============================] - 8s 10ms/step - loss: 0.1974 - mae: 2.0373 - val_loss: 0.1994 - val_mae: 2.0536\n",
+      "Epoch 19/100\n",
+      "791/791 [==============================] - 8s 11ms/step - loss: 0.1976 - mae: 2.0354 - val_loss: 0.1998 - val_mae: 2.0686\n",
+      "Epoch 20/100\n",
+      "791/791 [==============================] - 8s 10ms/step - loss: 0.1973 - mae: 2.0348 - val_loss: 0.1997 - val_mae: 2.0523\n",
+      "Epoch 21/100\n",
+      "791/791 [==============================] - 8s 10ms/step - loss: 0.1972 - mae: 2.0342 - val_loss: 0.1995 - val_mae: 2.0561\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7f97a20b5ca0>"
+       "<keras.callbacks.History at 0x7f0ddc0ee0d0>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=0.01), loss=tf.keras.losses.MeanSquaredLogarithmicError(), metrics=['mae'])\n",
+    "model.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=0.001), loss=tf.keras.losses.MeanSquaredLogarithmicError(), metrics=['mae'])\n",
     "model.fit(train_x, train_y, epochs=100, validation_data=(valid_x, valid_y),\n",
     "          callbacks=[\n",
     "                        checkpoint_callback,\n",
@@ -190,23 +182,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "248/248 [==============================] - 1s 2ms/step\n"
+      "248/248 [==============================] - 1s 3ms/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.44385643106571354"
+       "0.4435358029685519"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,14 +216,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "343/343 [==============================] - 1s 2ms/step\n"
+      "343/343 [==============================] - 1s 3ms/step\n"
      ]
     }
    ],
@@ -259,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
